--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+
+
 /* ----------------------------------------------------------------------- */
 /* body */
 
@@ -15,6 +17,18 @@ body {
 	min-width: 100%;
 
 }
+
+
+.title {
+  margin-top: 5vh;
+  text-decoration: underline;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-family: 'Merriweather', serif;
+
+}
+
+
 
 /* ----------------------------------------------------------------------- */
 /* Header */
@@ -37,6 +51,8 @@ body {
     margin: 0 auto
 }
 
+
+
 #homePage #createBtn {
   display: flex;
   justify-content: center;
@@ -51,6 +67,8 @@ body {
   color:white;
 
   padding: 2vw;
+
+  /* font-size:4vw; */
 }
 
 
@@ -63,12 +81,9 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 0 auto
+    margin: 0 auto;
 }
 
-#title {
-  margin-top: 5vh;
-}
 
 form {
   justify-content: center;
@@ -94,7 +109,17 @@ form input {
 /* ------------------------------------------------------------------------ */
 /* Print */
 
+
+.CallingCard {
+  padding-top: 5vh;
+  padding-bottom: 10vh;
+  font-family: 'Merriweather', serif;
+  font-weight: 400;
+}
+
+
 #print {
+  padding-top:5vh ;
   background: white;
   margin: 1rem;
 }
@@ -102,4 +127,42 @@ form input {
 #logo {
   background-color: rgb(61, 61, 61);
   padding: 3vh 6vw;
+}
+
+#displayContainer {
+  display: flex;
+  align-items: center;
+    justify-content: center;
+    margin: 0 auto
+}
+
+#CardDisplay {
+  border: 2px solid black;
+  width: 70vw;
+  text-align: left;
+  padding-left: 10vw;
+}
+
+#CardDisplay p {
+  /* margin: 10px; */
+}
+
+.signatures {
+  display:flex;
+}
+
+.signatures p {
+  width: 50%
+}
+
+.line {
+  display:flex;
+}
+
+.line p {
+  margin-right: 1.5vw;
+}
+
+.result {
+  font-weight: 700;
 }
